--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -3,29 +3,37 @@
     <span class="badge">{{coordiante.label}}</span> {{coordiante.y}}
   </li>
 </ul> -->
-<div class="container" style="padding: 20px">
+<div class="container" style="padding-top: 20px">
   <div class="row">
     <app-upload class='col-1 mb-3' style="padding: 0px"></app-upload>
     <div class='col-10 mb-3' ng-disabled='uploadStatus'>
       <form (ngSubmit)="getCoordinates()">
         <div class="row">
-          <div class="input-group col-5 mb-3">
+          <div class="input-group col-4 mb-3">
             <div class="input-group-prepend">
               <span class="input-group-text">X axis:</span>
             </div>
             <select class="custom-select" [(ngModel)]="XColumn" name="XColumn">
-              <option *ngFor="let column of columns">{{column}}</option>
+              <option *ngFor="let column of XColumns">{{column}}</option>
             </select>
           </div>
-          <div class="input-group col-5 mb-3">
+          <div class="input-group col-4 mb-3">
             <div class="input-group-prepend">
               <span class="input-group-text">Y axis:</span>
             </div>
             <select class="custom-select" [(ngModel)]="YColumn" name="YColumn">
-              <option *ngFor="let column of columns">{{column}}</option>
+              <option *ngFor="let column of YColumns">{{column}}</option>
             </select>
           </div>
-          <button class='btn btn-success col-2 mb-3' type="submit">Plot</button>
+          <div class="input-group col-3 mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text">Method:</span>
+              </div>
+              <select class="custom-select" [(ngModel)]="func" name="func">
+                <option *ngFor="let func of funcs">{{func}}</option>
+              </select>
+            </div>
+          <button class='btn btn-success col-1 mb-3' type="submit">Plot</button>
         </div>
       </form>
     </div>
@@ -35,9 +43,9 @@
   </select> -->
   <div *ngIf="showChartTypes" style="margin: 10px">
     <div class="form-check form-check-inline" *ngFor="let chartTyp of chartTypes">
-      <input class="form-check-input" type="radio" name="inlineRadioOptions" [(ngModel)]="chartType" (ngModelChange)="renderGraph()"
+      <input class="form-check-input" type="radio" [(ngModel)]="chartType" (ngModelChange)="renderGraph()"
         [value]="chartTyp">
-      <label class="form-check-label" for="inlineRadio2">{{chartTyp}}</label>
+      <label class="form-check-label">{{chartTyp}}</label>
     </div>
   </div>
   <div *ngIf="showChartTypes" id="chartContainer"></div>
